<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePizzaActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:text="@string/tv_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPizzaName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="0dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="@+id/tvName"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvTopping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/tv_topping"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPizzaName" />

    <EditText
        android:id="@+id/etPizzaTopping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:ems="10"
        android:hint="@string/topping_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTopping"
        app:layout_constraintTop_toTopOf="@+id/tvTopping"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvDiameter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/tv_diameter"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPizzaTopping" />

    <RadioGroup
        android:id="@+id/rgDiameter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiameter">

        <RadioButton
            android:id="@+id/rbD23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_23" />

        <RadioButton
            android:id="@+id/rbD30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_30" />

        <RadioButton
            android:id="@+id/rbD35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_35" />

        <RadioButton
            android:id="@+id/rbD40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_40" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>